Fix arguments serialization.